<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/prompt_workout_day"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgDays"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_sunday" />

        <RadioButton
            android:id="@+id/rbMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_monday" />

        <RadioButton
            android:id="@+id/rbTuerday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_tuesday" />

        <RadioButton
            android:id="@+id/rbWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_wednesday" />

        <RadioButton
            android:id="@+id/rbThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_thursday" />

        <RadioButton
            android:id="@+id/rbFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_friday" />

        <RadioButton
            android:id="@+id/rbSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_saturday" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtWorkoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:hint="@string/prompt_workout_name" />

    <EditText
        android:id="@+id/txtWorkoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:hint="@string/prompt_workout_description" />
</LinearLayout>